# minima.l

./: .clang-format  .clang-tidy  .gitignore  .projections.json  .ycm_extra_conf.py  404.html  CMakeLists.txt  CNAME  LICENSE.md  README.md  TASKS.md  index.html  mkdocs.yml  search.html  sitemap.xml
.builds/: arch.yml  debian.yml  openbsd.yml
.github/workflows/: c.yml
cmake/: FindLLVM.cmake  FindLemon.cmake  FindRagel.cmake  FindSSE.cmake  GetGitRevisionDescription.cmake  Lemon.cmake  Ragel.cmake
docs/: Manual.md  index.md
docs/manual/: Interpreter.md  Language.md  Modules.md  Plugins.md  Reference.md
docs/notes/: Closures.md  Continuations.md  Deconstruction.md  Inference.md  Tasks.md
etc/: minimal.vim
extra/c/: CMakeLists.txt
extra/lisp/: CMakeLists.txt  run.l
functions/: CMakeLists.txt  add.c  and.c  car.c  cdr.c  conc.c  cons.c  def.c  div.c  equ.c  eval.c  exit.c  functions.c  functions.h  ge.c  gt.c  in.c  isatm.c  ischr.c  islst.c  isnil.c  isnum.c  issym.c  ite.c  ith.c  lambda.c  le.c  let.c  list.c  load.c  lt.c  match.c  mul.c  not.c  or.c  out.c  pipe.c  prin.c  prinl.c  print.c  (+8 more)
grammar/: CMakeLists.txt  lexer.rl  parser.y
include/mnml/: closure.h  compiler.h  cps.h  debug.h  lexer.h  lisp.h  maker.h  module.h  plugin.h  slab.h  tree.h  types.h  utils.h
lib/: CMakeLists.txt  and.c  car.c  cdr.c  chr.c  close.c  conc.c  cond.c  cons.c  def.c  div.c  dup.c  equ.c  eval.c  exec.c  filter.l  flatten.l  foldl.l  foldr.l  fork.c  ge.c  gt.c  if.c  in.c  isatm.c  ischr.c  islst.c  isnil.c  isnum.c  isstr.c  issym.c  istru.c  lambda.c  le.c  len.l  let.c  list.c  list.l  load.c  map.l  (+32 more)
lib/c/: CMakeLists.txt  add.c  and.c  car.c  close.c  conc.c  cond.c  cons.c  dup.c  equ.c  exit.c  fork.c  gt.c  if.c  in.c  isatm.c  ischr.c  isnum.c  isstr.c  issym.c  istru.c  le.c  list.c  load.c  lt.c  match.c  mod.c  mul.c  neq.c  not.c  out.c  prinl.c  print.c  printl.c  prog.c  quit.c  quote.c  read.c  readlines.c  set.c  (+6 more)
lib/core/: CMakeLists.txt  base.c  debug.c  eval.c  lisp.c  maker.c  module.c  print.c  read.c  slab.c  tree.c  utils.c
lib/grammar/: CMakeLists.txt  lexer.rl  parser.y
lib/lisp/: caar.l  caddr.l  cdar.l  compile.l  cps.l  dedup.l  erase.l  map.l  ntoa.l  rev.l
lib/mnml/: CMakeLists.txt  add.c  and.c  cdr.c  close.c  conc.c  cond.c  cons.c  div.c  dup.c  equ.c  in.c  isnum.c  load.c  lt.c  match.c  mod.c  mul.c  not.c  out.c  prin.c  print.c  printl.c  quit.c  quote.c  set.c  str.c  sym.c  time.c  wait.c
lib/mnml/io/: in.c  lib.c  out.c  prin.c  prinl.c  print.c  printl.c  read.c  readline.c  readlines.c
lib/mnml/logic/: CMakeLists.txt  and.c  equ.c  lib.c  neq.c  not.c  or.c
lib/mnml/math/: CMakeLists.txt  add.c  div.c  ge.c  le.c  lib.c  mod.c  mul.c  sub.c
lib/mnml/std/: CMakeLists.txt  car.c  cdr.c  chr.c  conc.c  cond.c  cons.c  def.c  eval.c  if.c  isatm.c  ischr.c  islst.c  isnil.c  isnum.c  isstr.c  issym.c  istru.c  lambda.c  len.c  let.c  lib.c  list.c  load.c  match.c  ns.c  prog.c  quit.c  quote.c  set.c  setq.c  str.c  stream.c  sym.c  unless.c  use.c  when.c  while.c
lib/mnml/sys/: CMakeLists.txt  lib.c  slabinfo.c  time.c
lib/mnml/unix/: CMakeLists.txt  accept.c  close.c  connect.c  dup.c  exec.c  fork.c  lib.c  listen.c  pipe.c  select.c  time.c  unlink.c  wait.c
lib/module/: CMakeLists.txt  binary.c  module.c  module.h  utils.c
lib/stubs/: CMakeLists.txt  extern.c
lisp/: CMakeLists.txt  append.l  args.l  assoc.l  aton.l  caar.l  cadar.l  caddr.l  cadr.l  cc.l  cdar.l  compile.l  cps.l  debug.c  dedup.l  erase.l  filter.l  flatten.l  foldl.l  foldr.l  functions.c  functions.h  has.l  insert.l  iter.l  iter2.l  iterators.l  last.l  len.l  lexer.h  lexer.rl  lisp.c  lisp.h  manips.l  map.l  map2.l  merge.l  ntoa.l  orelse.l  parser.y  (+21 more)
manual/Interpreter/: index.html
manual/Language/: index.html
manual/Modules/: index.html
manual/Reference/: index.html
modules/: CMakeLists.txt
modules/mnml/: CMakeLists.txt
modules/mnml/io/: CMakeLists.txt  in.c  print.c  read.c
modules/mnml/logic/: lib.c  not.c
modules/mnml/math/: gt.c  lt.c
modules/mnml/std/: cons.c  load.c  str.c
modules/mnml/sys/: slabinfo.c
modules/mnml/unix/: exec.c  pipe.c
notes/Closures/: index.html
notes/Continuations/: index.html
notes/Deconstruction/: index.html
notes/Inference/: index.html
plugins/: CMakeLists.txt  add.c  and.c  car.c  cdr.c  chr.c  close.c  compile.cpp  conc.c  cond.c  cons.c  cps.c  def.c  div.c  dup.c  equ.c  eval.c  exec.c  exit.c  fork.c  ge.c  gt.c  if.c  in.c  isatm.c  ischr.c  islst.c  isnil.c  isnum.c  issym.c  istru.c  lambda.c  le.c  let.c  lift.c  list.c  load.c  lt.c  match.c  mod.c  (+21 more)
search/: search_index.json
share/mnml/: CMakeLists.txt  append.l  args.l  aton.l  cc.l  cps.l  dedup.l  erase.l  filter.l  flatten.l  has.l  http.l  insert.l  isort.l  iter.l  iter2.l  iterators.l  join.l  last.l  len.l  manips.l  merge.l  ntoa.l  orelse.l  replc.l  rev.l  run.l  split.l  strlt.l  term.l  test.l  trim.l  truncr.l
src/: CMakeLists.txt  closure.c  cps.c  debug.c  lexer.rl  lisp.c  maker.c  parser.y  plugin.c  slab.c  utils.c
src/compiler/: CMakeLists.txt
src/core/: CMakeLists.txt  closure.c  debug.c  lisp.c  maker.c  plugin.c  slab.c  utils.c
src/grammar/: CMakeLists.txt  lexer.rl  parser.y
src/module/: binary.c  module.h  utils.c
syntax/: CMakeLists.txt  lexer.h  lexer.rl  parser.y
test/: CMakeLists.txt
test/c/: CMakeLists.txt  primitives.h  slab.c  syntax.c  tree.c  utils.c  utils.h
test/lisp/: CMakeLists.txt  arithmetics.l  basics.l  cc.l  closure.l  comparators.l  control.l  deconstruction.l  fib.l  inference.l  io.l  refcount.l  test.l
test/unit/: CMakeLists.txt  closure_nested.l  cond.l  curry.l  function.l  function_eval.l  function_eval_list.l  function_nested.l  function_recurse.l  function_recurse_tc.l  if.l  lambda.l  lambda_eval.l  lambda_let.l  lambda_let_nested.l  lambda_let_nested_crossref.l  lambda_nested.l  let_nested.l
tests/: CMakeLists.txt  compile.l  fib.l  primitives.h  slab.c  syntax.c  utils.c  utils.h
tools/: CMakeLists.txt  mnml.c
(+1 files in other folders)
